--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
       </tr>
     </table>
     <hr />
-    <p><a href="">My Hobbies</a> <a href="contact.html">Contact Me</a></p>
+    <p><a href="">My Hobbies</a> <a href="contact.html" target="_blank">Contact Me</a></p>
   </body>
 </html>
