--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </table>
     <hr />
     <p>
-      <a href="">My Hobbies oh yea</a>
+      <a href="">My Hobbies</a>
       <a href="contact.html" target="_blank">Contact Me</a>
     </p>
   </body>
