--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </tr>
       <tr></tr>
     </table>
-    <h1>Angela Yu</h1>
+    <h1>Miles Davis</h1>
     <p>
       <em
         >Founder and CTO of
