--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First HTML Page</title>
+    <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -65,6 +66,7 @@
     <p>
       <a href="">My Hobbies</a>
       <a href="contact.html" target="_blank">Contact Me</a>
+      <a href="inputs.html">My Inputs</a>
     </p>
   </body>
 </html>
